update description font size and fix overflow issue

--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -52,7 +52,7 @@
 }
 
 .cardDescription {
-  font-size: 0.9rem;
+  font-size: 13px;
   font-weight: 400;
   color: gray;
   margin-top: 0.3rem;
